--- a/_config.yml
+++ b/_config.yml
@@ -87,17 +87,17 @@ avatar: '/IrAce1.jpg'
 toc: true
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
+  comments: true  # boolean type, the global switch for posts comments.
   shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
 
 gitalk:
-enable: true
-owner: uchief
-repo: uchief.github.io
-clientID: 5e27f68dbc8e16bda35e
-clientSecret: 10c8794ba3583d326f4bacba789158119a82c3c8
+  enable: true
+  owner: uchief
+  repo: uchief.github.io
+  clientID: 5e27f68dbc8e16bda35e
+  clientSecret: 10c8794ba3583d326f4bacba789158119a82c3c8
 
 # ------------ The following options are not recommended to be modified ------------------
 
